--- a/Gitlab/files/pom.xml
+++ b/Gitlab/files/pom.xml
@@ -38,4 +38,11 @@
 			<url>${env.MAVEN_REPO_URL}/repository/internal/</url>
 		</repository>
 	</distributionManagement>
+	<repositories>
+		<repository>
+			<id>central</id>
+			<name>83d43b5afeb5-releases</name>
+			<url>${env.MAVEN_REPO_URL}/repository/internal/</url>
+		</repository>
+	</repositories>
 </project>
